--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -14,6 +14,12 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                {% block body %}{% endblock %}
+            </div>
+        </div>
+    </div>
     </body>
 </html>
