--- a/src/templates/mobile_phone/index.html.twig
+++ b/src/templates/mobile_phone/index.html.twig
@@ -5,21 +5,28 @@
 {% block body %}
     <h1>MobilePhone index</h1>
 
+    <form class="input-group my-lg-4" method="get" action="{{ path('app_mobile_phone_search') }}">
+        <div class="col-4">
+            <input type="search" placeholder="Search" class="form-control" name="q" value="{{ q|default('') }}">
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+
     <table class="table">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Brand</th>
-                <th>Model</th>
-                <th>OperatingSystem</th>
-                <th>ScreenSize</th>
-                <th>Memory</th>
-                <th>Storage</th>
-                <th>Camera</th>
-                <th>BatteryCapacity</th>
-                <th>Price</th>
-                <th>actions</th>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <th>Brand</th>
+            <th>Model</th>
+            <th>OperatingSystem</th>
+            <th>ScreenSize</th>
+            <th>Memory</th>
+            <th>Storage</th>
+            <th>Camera</th>
+            <th>BatteryCapacity</th>
+            <th>Price</th>
+            <th>actions</th>
+        </tr>
         </thead>
         <tbody>
         {% for mobile_phone in mobile_phones %}
