--- a/src/templates/mobile_company/show.html.twig
+++ b/src/templates/mobile_company/show.html.twig
@@ -29,7 +29,9 @@
                 <ul>
                     {% for mobile_phone in mobile_company.mobilePhones %}
                         <li>
-                            {{ mobile_phone.model }} - {{ mobile_phone.memory }} / {{ mobile_phone.storage }}
+                            <a href="{{ path('app_mobile_phone_show', {'id': mobile_company.id}) }}">
+                                {{ mobile_phone.model }} - {{ mobile_phone.memory }} / {{ mobile_phone.storage }}
+                            </a>
                         </li>
                     {% endfor %}
                 </ul>
