--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -16,9 +16,11 @@
 </head>
 <body>
 
-{{ knp_menu_render('main') }}
+<header>
+    {{ knp_menu_render('main', {'template': 'menu/navbar.html.twig'}) }}
+</header>
 
-<div class="container">
+<div class="container py-5">
     <div class="row">
         <div class="col-8">
             {% block body %}{% endblock %}
