--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -20,11 +20,9 @@
     {{ knp_menu_render('main', {'template': 'menu/navbar.html.twig'}) }}
 </header>
 
-<div class="container py-5">
-    <div class="row">
-        <div class="col-8">
-            {% block body %}{% endblock %}
-        </div>
+<div class="container my-5">
+    <div class="col-8">
+        {% block body %}{% endblock %}
     </div>
 </div>
 </body>
