--- a/src/templates/login/index.html.twig
+++ b/src/templates/login/index.html.twig
@@ -10,15 +10,15 @@
     <h1>Login</h1>
 
     <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email</label>
-        <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}">
+        <label for="username" class="mb-2">Email</label>
+        <input type="text" class="form-control mb-3" id="username" name="_username" value="{{ last_username }}">
 
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="_password">
+        <label for="password" class="mb-2">Password</label>
+        <input type="password" class="form-control mb-4" id="password" name="_password">
 
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"> #}
 
-        <button type="submit" class="btn">login</button>
+        <button type="submit" class="btn btn-outline-light">login</button>
     </form>
 {% endblock %}
