--- a/src/templates/mobile_phone/_delete_form.html.twig
+++ b/src/templates/mobile_phone/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_mobile_phone_delete', {'id': mobile_phone.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ mobile_phone.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-light">Delete</button>
 </form>
