--- a/src/templates/registration/register.html.twig
+++ b/src/templates/registration/register.html.twig
@@ -14,6 +14,6 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-outline-light">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
