Change user logger to owner, create comment voter and some improvements

--- a/src/templates/mobile_phone/show.html.twig
+++ b/src/templates/mobile_phone/show.html.twig
@@ -7,46 +7,46 @@
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ mobile_phone.id }}</td>
-            </tr>
-            <tr>
-                <th>Brand</th>
-                <td>{{ mobile_phone.brand }}</td>
-            </tr>
-            <tr>
-                <th>Model</th>
-                <td>{{ mobile_phone.model }}</td>
-            </tr>
-            <tr>
-                <th>OperatingSystem</th>
-                <td>{{ mobile_phone.operatingSystem }}</td>
-            </tr>
-            <tr>
-                <th>ScreenSize</th>
-                <td>{{ mobile_phone.screenSize }}</td>
-            </tr>
-            <tr>
-                <th>Memory</th>
-                <td>{{ mobile_phone.memory }}</td>
-            </tr>
-            <tr>
-                <th>Storage</th>
-                <td>{{ mobile_phone.storage }}</td>
-            </tr>
-            <tr>
-                <th>Camera</th>
-                <td>{{ mobile_phone.camera }}</td>
-            </tr>
-            <tr>
-                <th>BatteryCapacity</th>
-                <td>{{ mobile_phone.batteryCapacity }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ mobile_phone.price }}</td>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <td>{{ mobile_phone.id }}</td>
+        </tr>
+        <tr>
+            <th>Brand</th>
+            <td>{{ mobile_phone.brand }}</td>
+        </tr>
+        <tr>
+            <th>Model</th>
+            <td>{{ mobile_phone.model }}</td>
+        </tr>
+        <tr>
+            <th>OperatingSystem</th>
+            <td>{{ mobile_phone.operatingSystem }}</td>
+        </tr>
+        <tr>
+            <th>ScreenSize</th>
+            <td>{{ mobile_phone.screenSize }}</td>
+        </tr>
+        <tr>
+            <th>Memory</th>
+            <td>{{ mobile_phone.memory }}</td>
+        </tr>
+        <tr>
+            <th>Storage</th>
+            <td>{{ mobile_phone.storage }}</td>
+        </tr>
+        <tr>
+            <th>Camera</th>
+            <td>{{ mobile_phone.camera }}</td>
+        </tr>
+        <tr>
+            <th>BatteryCapacity</th>
+            <td>{{ mobile_phone.batteryCapacity }}</td>
+        </tr>
+        <tr>
+            <th>Price</th>
+            <td>{{ mobile_phone.price }}</td>
+        </tr>
         </tbody>
     </table>
 
@@ -55,4 +55,30 @@
     <a href="{{ path('app_mobile_phone_edit', {'id': mobile_phone.id}) }}">edit</a>
 
     {{ include('mobile_phone/_delete_form.html.twig') }}
+
+    <button class="btn btn-outline-light mt-4" type="button" data-bs-toggle="collapse" data-bs-target="#reviewForm">
+        Comments
+    </button>
+
+    <div class="collapse mt-4" id="reviewForm">
+        <a href="{{ path('app_comment_new', {'id': mobile_phone.id}) }}" class="btn btn-outline-light mb-4" role="button">
+            Add Comment
+        </a>
+        {% for comment in mobile_phone.comments %}
+            <div class="card card-body mb-4">
+                <div class="mb-2">
+                    <div class="text-end">
+                        <a href="{{ path('app_comment_edit', {'id': comment.id}) }}"
+                           class="btn btn-primary" role="button">Edit</a>
+                    </div>
+                    <label class="form-label">Email:</label>
+                    <input type="text" class="form-control mb-2" value="{{ comment.owner.email }}" readonly>
+                    <label class="form-label">Subject:</label>
+                    <input type="text" class="form-control mb-2" value="{{ comment.subject }}" readonly>
+                    <label class="form-label">Text:</label>
+                    <textarea class="form-control" readonly>{{ comment.body }}</textarea>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
