--- a/src/templates/comment/edit.html.twig
+++ b/src/templates/comment/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('comment/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_comment_index') }}">back to list</a>
+    <a href="{{ path('app_comment_index') }}">{{ 'actions.back'|trans }}</a>
 
     {{ include('comment/_delete_form.html.twig') }}
 {% endblock %}
