--- a/src/templates/comment/index.html.twig
+++ b/src/templates/comment/index.html.twig
@@ -21,8 +21,8 @@
                 <td>{{ comment.subject }}</td>
                 <td>{{ comment.body }}</td>
                 <td>
-                    <a href="{{ path('app_comment_show', {'id': comment.id}) }}">show</a>
-                    <a href="{{ path('app_comment_edit', {'id': comment.id}) }}">edit</a>
+                    <a href="{{ path('app_comment_show', {'id': comment.id}) }}">{{ 'actions.show'|trans }}</a>
+                    <a href="{{ path('app_comment_edit', {'id': comment.id}) }}">{{ 'actions.edit'|trans }}</a>
                 </td>
             </tr>
         {% else %}
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_comment_new') }}">Create new</a>
+    <a href="{{ path('app_comment_new') }}">{{ 'actions.create'|trans }}</a>
 {% endblock %}
