--- a/src/templates/comment/new.html.twig
+++ b/src/templates/comment/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('comment/_form.html.twig') }}
 
-    <a href="{{ path('app_comment_index') }}">back to list</a>
+    <a href="{{ path('app_comment_index') }}">{{ 'actions.back'|trans }}</a>
 {% endblock %}
