--- a/src/templates/comment/show.html.twig
+++ b/src/templates/comment/show.html.twig
@@ -22,9 +22,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_comment_index') }}">back to list</a>
+    <a href="{{ path('app_comment_index') }}">{{ 'actions.back'|trans }}</a>
 
-    <a href="{{ path('app_comment_edit', {'id': comment.id}) }}">edit</a>
+    <a href="{{ path('app_comment_edit', {'id': comment.id}) }}">{{ 'actions.edit'|trans }}</a>
 
     {{ include('comment/_delete_form.html.twig') }}
 {% endblock %}
