--- a/src/templates/mobile_company/_delete_form.html.twig
+++ b/src/templates/mobile_company/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_mobile_company_delete', {'id': mobile_company.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ mobile_company.id) }}">
-    <button class="btn btn-outline-light">Delete</button>
+    <button class="btn btn-outline-light">{{ 'actions.delete'|trans }}</button>
 </form>
