--- a/src/templates/mobile_company/edit.html.twig
+++ b/src/templates/mobile_company/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('mobile_company/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_mobile_company_index') }}">back to list</a>
+    <a href="{{ path('app_mobile_company_index') }}">{{ 'actions.back'|trans }}</a>
 
     {{ include('mobile_company/_delete_form.html.twig') }}
 {% endblock %}
