--- a/src/templates/mobile_company/index.html.twig
+++ b/src/templates/mobile_company/index.html.twig
@@ -23,8 +23,8 @@
                 <td>{{ mobile_company.phone }}</td>
                 <td>{{ mobile_company.address }}</td>
                 <td>
-                    <a href="{{ path('app_mobile_company_show', {'id': mobile_company.id}) }}">show</a>
-                    <a href="{{ path('app_mobile_company_edit', {'id': mobile_company.id}) }}">edit</a>
+                    <a href="{{ path('app_mobile_company_show', {'id': mobile_company.id}) }}">{{ 'actions.show'|trans }}</a>
+                    <a href="{{ path('app_mobile_company_edit', {'id': mobile_company.id}) }}">{{ 'actions.edit'|trans }}</a>
                 </td>
             </tr>
         {% else %}
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_mobile_company_new') }}">Create new</a>
+    <a href="{{ path('app_mobile_company_new') }}">{{ 'actions.create'|trans }}</a>
 {% endblock %}
