--- a/src/templates/mobile_company/new.html.twig
+++ b/src/templates/mobile_company/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('mobile_company/_form.html.twig') }}
 
-    <a href="{{ path('app_mobile_company_index') }}">back to list</a>
+    <a href="{{ path('app_mobile_company_index') }}">{{ 'actions.back'|trans }}</a>
 {% endblock %}
