--- a/src/templates/mobile_phone/edit.html.twig
+++ b/src/templates/mobile_phone/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('mobile_phone/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_mobile_phone_index') }}">back to list</a>
+    <a href="{{ path('app_mobile_phone_index') }}">{{ 'actions.back'|trans }}</a>
 
     {{ include('mobile_phone/_delete_form.html.twig') }}
 {% endblock %}
