--- a/src/templates/mobile_phone/new.html.twig
+++ b/src/templates/mobile_phone/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('mobile_phone/_form.html.twig') }}
 
-    <a href="{{ path('app_mobile_phone_index') }}">back to list</a>
+    <a href="{{ path('app_mobile_phone_index') }}">{{ 'actions.back'|trans }}</a>
 {% endblock %}
