--- a/src/templates/login/index.html.twig
+++ b/src/templates/login/index.html.twig
@@ -7,7 +7,7 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1>Login</h1>
+    <h1>{{ 'actions.login'|trans }}</h1>
 
     <form action="{{ path('app_login') }}" method="post">
         <label for="username" class="mb-2">Email</label>
@@ -19,6 +19,6 @@
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"> #}
 
-        <button type="submit" class="btn btn-outline-light">login</button>
+        <button type="submit" class="btn btn-outline-light">{{ 'actions.login'|trans }}</button>
     </form>
 {% endblock %}
