--- a/src/templates/menu/navbar.html.twig
+++ b/src/templates/menu/navbar.html.twig
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ path('app_home') }}">TechTalks</a>
+        <a class="navbar-brand" href="{{ path('app_home') }}">{{ 'nav.brand'|trans }}</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
