--- a/src/templates/about/index.html.twig
+++ b/src/templates/about/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}About Us{% endblock %}
+{% block title %}{{ 'labels.about_us'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container text-start">
