--- a/src/templates/comment/show.html.twig
+++ b/src/templates/comment/show.html.twig
@@ -1,30 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Comment{% endblock %}
+{% block title %}{{ 'labels.show_comment'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Comment</h1>
+    <h1 class="mb-4">{{ 'labels.show_comment'|trans }}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ comment.id }}</td>
-            </tr>
-            <tr>
-                <th>Subject</th>
-                <td>{{ comment.subject }}</td>
-            </tr>
-            <tr>
-                <th>Body</th>
-                <td>{{ comment.body }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container d-inline-flex mb-4">
+        {% if is_granted('ROLE_EDITOR') or is_granted('EDIT', comment) %}
+            <a href="{{ path('app_comment_edit', {'id': comment.id}) }}"
+               class="btn btn-outline-success me-2">{{ 'actions.edit'|trans }}</a>
+        {% endif %}
 
-    <a href="{{ path('app_comment_index') }}">{{ 'actions.back'|trans }}</a>
+        {% if is_granted('ROLE_EDITOR') or is_granted('DELETE', comment) %}
+            {{ include('comment/_delete_form.html.twig') }}
+        {% endif %}
+    </div>
 
-    <a href="{{ path('app_comment_edit', {'id': comment.id}) }}">{{ 'actions.edit'|trans }}</a>
-
-    {{ include('comment/_delete_form.html.twig') }}
+    <div class="card mb-4">
+        <div class="card-body">
+            <h5 class="card-title">
+                {{ comment.subject }}
+            </h5>
+            <p class="card-text">{{ comment.body }}</p>
+        </div>
+    </div>
 {% endblock %}
