--- a/src/templates/login/index.html.twig
+++ b/src/templates/login/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}{{ 'labels.login'|trans }}{% endblock %}
 
 {% block body %}
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1>{{ 'actions.login'|trans }}</h1>
+    <h1>{{ 'labels.login'|trans }}</h1>
 
     <form action="{{ path('app_login') }}" method="post">
         <label for="username" class="mb-2">Email</label>
