--- a/src/templates/mobile_company/show.html.twig
+++ b/src/templates/mobile_company/show.html.twig
@@ -1,48 +1,56 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}MobileCompany{% endblock %}
+{% block title %}{{ mobile_company.name }}{% endblock %}
 
 {% block body %}
-    <h1>MobileCompany</h1>
+    <h1 class="mb-4">{{ mobile_company.name }}</h1>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Id</th>
-            <td>{{ mobile_company.id }}</td>
-        </tr>
-        <tr>
-            <th>Name</th>
-            <td>{{ mobile_company.name }}</td>
-        </tr>
-        <tr>
-            <th>Phone</th>
-            <td>{{ mobile_company.phone }}</td>
-        </tr>
-        <tr>
-            <th>Address</th>
-            <td>{{ mobile_company.address }}</td>
-        </tr>
-        <tr>
-            <th>Mobile Phones</th>
-            <td>
-                <ul>
-                    {% for mobile_phone in mobile_company.mobilePhones %}
-                        <li>
-                            <a href="{{ path('app_mobile_phone_show', {'id': mobile_company.id}) }}">
-                                {{ mobile_phone.model }} - {{ mobile_phone.memory }} / {{ mobile_phone.storage }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <p class="h6">
+        {{ mobile_company.phone }}
+    </p>
+    <p class="h6 mb-4">
+        {{ mobile_company.address }}
+    </p>
 
-    <a href="{{ path('app_mobile_company_index') }}">{{ 'actions.back'|trans }}</a>
+    <div class="container d-inline-flex">
+        {% if is_granted('ROLE_EDITOR') or is_granted('EDIT', mobile_company) %}
+            <a href="{{ path('app_mobile_company_edit', {'id': mobile_company.id}) }}"
+               class="btn btn-outline-success me-2">{{ 'actions.edit'|trans }}</a>
+        {% endif %}
 
-    <a href="{{ path('app_mobile_company_edit', {'id': mobile_company.id}) }}">{{ 'actions.edit'|trans }}</a>
+        {% if is_granted('ROLE_EDITOR') or is_granted('DELETE', mobile_company) %}
+            {{ include('mobile_company/_delete_form.html.twig') }}
+        {% endif %}
+    </div>
 
-    {{ include('mobile_company/_delete_form.html.twig') }}
+    {% for mobile_phone in mobile_company.mobilePhones %}
+        <div class="card m-3 d-inline-block" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">{{ mobile_phone.brand }}</h5>
+                <p class="card-text h6">{{ mobile_phone.model }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <span>Memory: </span>
+                    {{ mobile_phone.memory }}
+                </li>
+                <li class="list-group-item">
+                    <span>Storage: </span>
+                    {{ mobile_phone.storage }}
+                </li>
+                <li class="list-group-item">
+                    <span>Price: </span>
+                    {{ mobile_phone.price|format_currency('USD') }}
+                </li>
+            </ul>
+            <div class="card-body">
+                <a href="{{ path('app_mobile_phone_show', {'id': mobile_phone.id}) }}"
+                   class="btn btn-outline-primary me-2">{{ 'actions.show'|trans }}</a>
+                {% if is_granted('ROLE_EDITOR') or is_granted('EDIT', mobile_phone) %}
+                <a href="{{ path('app_mobile_phone_edit', {'id': mobile_phone.id}) }}"
+                   class="btn btn-outline-success">{{ 'actions.edit'|trans }}</a>
+                {% endif %}
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
