--- a/src/templates/mobile_phone/edit.html.twig
+++ b/src/templates/mobile_phone/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit MobilePhone{% endblock %}
+{% block title %}{{ 'labels.edit_mobile_phone'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit MobilePhone</h1>
+    <h1>{{ 'labels.edit_mobile_phone'|trans }}</h1>
+    {% if is_granted('ROLE_EDITOR') or is_granted('EDIT', mobile_phone) %}
+        {{ include('mobile_phone/_form.html.twig') }}
+    {% endif %}
 
-    {{ include('mobile_phone/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_mobile_phone_index') }}">{{ 'actions.back'|trans }}</a>
-
-    {{ include('mobile_phone/_delete_form.html.twig') }}
+    {% if is_granted('ROLE_EDITOR') or is_granted('DELETE', mobile_phone) %}
+        {{ include('mobile_phone/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
