--- a/src/templates/registration/register.html.twig
+++ b/src/templates/registration/register.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{ 'labels.register'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'actions.register'|trans }}</h1>
+    <h1>{{ 'labels.register'|trans }}</h1>
 
     {{ form_errors(registrationForm) }}
 
